--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "mercadopago": "^2.0.15",
-    "next": "14.2.8",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.12",
@@ -34,7 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
