--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "@paypal/paypal-js": "^8.1.2",
     "@paypal/react-paypal-js": "^8.7.0",
-    "@prisma/client": "^5.19.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "mercadopago": "^2.0.15",
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.21",
+    "pg": "^8.16.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.0",
@@ -36,7 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "^16.0.7",
     "postcss": "^8",
-    "prisma": "^5.19.1",
+    "prisma": "^7.1.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
