--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run prisma:deploy && next build",
+    "build": "pnpm run prisma:deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node src/seed/seed-database.ts",
-    "prisma:deploy": "npx prisma migrate dev && prisma generate"
+    "prisma:deploy": "set NODE_OPTIONS=--dns-result-order=ipv4first && npx prisma migrate dev && npx prisma generate"
   },
   "dependencies": {
     "@paypal/paypal-js": "^8.1.2",
