--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node src/seed/seed-database.ts",
-    "prisma:deploy": "set NODE_OPTIONS=--dns-result-order=ipv4first && npx prisma migrate dev && npx prisma generate"
+    "prisma:deploy": "npx prisma generate"
   },
   "dependencies": {
     "@paypal/paypal-js": "^8.1.2",
