--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.12",
+    "xlsx": "^0.18.5",
+    "adm-zip": "^0.5.10",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/adm-zip": "^0.5.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
