--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "adm-zip": "^0.5.10",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "mercadopago": "^2.0.15",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.21",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -30,14 +32,14 @@
     "react-icons": "^5.3.0",
     "swiper": "^11.1.12",
     "xlsx": "^0.18.5",
-    "adm-zip": "^0.5.10",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/adm-zip": "^0.5.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
